# jupytex

./: LICENSE  README.md  pyproject.toml
src/jupytex/: __init__.py
src/jupytexmagic/: __init__.py  jupytexmagic.py
tests/: Jupyter notebook.ipynb  jupytexmagic.ipynb  lab.ipynb
tests/.ipynb_checkpoints/: jupytexmagic-checkpoint.ipynb  notebook-checkpoint.ipynb
